--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'com.waoap'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -19,13 +19,13 @@ ext {
 sourceCompatibility = '17'
 targetCompatibility = '17'
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
 application {
     mainModule = 'com.waoap.addressbook'
-    mainClass = 'com.waoap.addressbook.HelloApplication'
+    mainClass = 'com.waoap.addressbook.MainApplication'
 }
 
 javafx {
@@ -34,7 +34,7 @@ javafx {
 }
 
 dependencies {
-    implementation(fileTree(dir: 'lib',includes: ['*.jar']))
+    implementation(fileTree(dir: 'lib', includes: ['*.jar']))
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
@@ -44,13 +44,22 @@ test {
 }
 
 jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
+    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip") as RegularFile
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'app'
+        name = 'AddresBook'
+    }
+    jpackage {
+        vendor = 'Waoap'
+        description = 'A simple addresbook application.'
+        installerOptions = ['--win-menu', '--win-shortcut', '--win-shortcut-prompt', '--win-dir-chooser']
     }
 }
 
 jlinkZip {
     group = 'distribution'
+}
+
+jpackage {
+
 }
